--- a/styles/ZoomComponent.css
+++ b/styles/ZoomComponent.css
@@ -1,7 +1,7 @@
 .ZoomContainer {
     position: absolute;
-    bottom: 100px;
-    right: 16px;
+    bottom: 88px;
+    right: 14px;
     height: 62px;
     width: 30px;
     pointer-events: none;
